Updated index.html with content and images.

--- a/index.html
+++ b/index.html
@@ -132,19 +132,20 @@
 		<!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
 		<div class="row-fluid heading">
 			<div class="span12">
-				<h1>Product</h1>
+				<h1>Furever Friends (pending)</h1>
 			</div>
 		</div> 
 		<div class="row-fluid subheading">
 			<div class="span12">
 				<!-- Special typography from Bootstrap for lead paragraph. -->
 				<!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-				<p class="lead">One sentence description.</p>
+				<p class="lead">A complete animal rescue management system and homeless pet adoption website.</p>
 			</div>
 		</div>
 		<div class="row-fluid pitch">
 			<div class="span5 offset1 video">
-				<img class="img-polaroid" src="http://placehold.it/480x300">
+				<!--<img class="img-polaroid" src="http://placehold.it/480x300">-->
+				<iframe src="https://skydrive.live.com/embed?cid=5C68E07043EF36B1&resid=5C68E07043EF36B1%2131246&authkey=AF8WKBzsKWaiKmo" width="480" height="300" frameborder="0" scrolling="no"></iframe>
 			</div>
 
 			<!-- We define a new 'actions' div to contain statistics, order, and share buttons.-->
@@ -154,17 +155,17 @@
 						<div class="span4">
 							<!-- linediv-l and linediv-r give dividing lines that look different in horizontal and vertical layouts, illustrating media queries. -->
 							<div class="linediv-l">
-								<h3>1000</h3> <p>backers</p>
+								<h3>0</h3> <p>backers</p>
 							</div>
 						</div>
 						<div class="span4">
 							<div class="linediv-c">
-								<h3>$6000</h3> <p>of $10,000</p>
+								<h3>$0</h3> <p>of $250,000</p>
 							</div>
 						</div>
 						<div class="span4">
 							<div class="linediv-r">
-								<h3>10</h3> <p>days left</p>
+								<h3>X</h3> <p>days left</p>
 							</div>
 						</div>
 					</div>
@@ -173,8 +174,8 @@
 					<!-- Bootstrap progress bar -->
 					<!-- http://twitter.github.io/bootstrap/components.html#progress -->
 					<div class="thermometer progress active">
-						<div class="bar bar-success" style="width: 60%;"></div>
-						<div class="bar bar-warning" style="width: 40%;"></div>
+						<div class="bar bar-success" style="width: 0%;"></div>
+						<div class="bar bar-warning" style="width: 100%;"></div>
 					</div>
 				</div>
 				<div class="span6 offset3 order">
@@ -197,23 +198,38 @@
 		<!-- http://placehold.it -->
 		<div class="row-fluid section1">
 			<div class="span5 offset1 asset">
-				<img class="img-polaroid" src="http://placehold.it/480x300">
+				<!--<img class="img-polaroid" src="http://placehold.it/480x300">-->
+				<img src="http://farm7.staticflickr.com/6235/6267172595_f590fd472b.jpg">
 			</div>
 			<div class="span5 copy">
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu mollis justo velit at nunc. Fusce nec egestas sem. Donec fringilla ante lectus, a pellentesque lacus dignissim ac. Sed volutpat lorem ut congue malesuada. In facilisis scelerisque turpis sed lacinia. Donec in orci lectus. Donec auctor semper quam, eget rhoncus purus fringilla id. Phasellus id nibh eu risus ultrices adipiscing.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu mollis justo velit at nunc. Fusce nec egestas sem. Donec fringilla.
+					Each year 5 million and 7 million animals enter animal shelters. Of those staggering numbers, 3 million to 4 million are unfortunately euthanized (60% of dogs and 70% of cats). There are about 5,000 community animal shelters in the U.S. today. (Source: http://www.aspca.org/about-us/faq/pet-statistics.aspx) Furever Friends seeks to tip that balance by easing the administrative burden on the shelter staff and volunteers as well as non-shelter-based animal rescue where in home fostering is utilized to house and socialize the animal. Many of these staff members and volunteers spend numerous hours laboriously updating data in MS Excel documents, organizational web sites, social media sites, and various web sites that promote the animals for adoption. Help us help more animals. Preorder today for your shelter or animal resuce group.
 				</p>
 			</div>
 		</div>
 
 		<div class="row-fluid section2">
 			<div class="span5 offset1 copy copy-right">
+				<h3>Features include:</h3>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu mollis justo velit at nunc. Fusce nec egestas sem. Donec fringilla ante lectus, a pellentesque lacus dignissim ac. Sed volutpat lorem ut congue malesuada. In facilisis scelerisque turpis sed lacinia. Donec in orci lectus. Donec auctor semper quam, eget rhoncus purus fringilla id. Phasellus id nibh eu risus ultrices adipiscing.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec porta, dui sagittis hendrerit rutrum, nunc leo tempus nisl, eu mollis justo velit at nunc. Fusce nec egestas sem. Donec fringilla.
+					<ul>
+						<li>Consolidating the data into one system.</li>
+						<li>Pushing data into social media sites: Facebook, Twitter, Pinterest.</li>
+						<li>Optimizing animal data for search engines.</li>
+						<li>Providing a template or custom designed organizational website with custom domain names and hosting.</li>
+						<li>Provide tools and techniques for improving content.</li>
+						<li>Provide blog engine with tools and techniques for blogging.</li>
+						<li>Providing fund raising opportunities and ideas.</li>
+						<li>Providing management tools for tracking animal healthcare.</li>
+						<li>Providing management tools for animal housing and fostering.</li>
+						<li>Providing suitable for compliance, board meetings, and press releases.</li>
+						<li>Providing direct access to the new FureverFriends.com (url pending) public-facing website that will list animals available for adoption.</li>
+					</ul>
 				</p>
 			</div>
 			<div class="span5 asset">
-				<img class="img-polaroid" src="http://placehold.it/480x300">
+				<!--<img class="img-polaroid" src="http://placehold.it/480x300">-->
+				<img src="http://farm6.staticflickr.com/5006/5244715417_aa4e26e1d3.jpg">
 			</div>
 		</div>
 
