--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -132,7 +133,7 @@
 		<!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
 		<div class="row-fluid heading">
 			<div class="span12">
-				<h1>Furever Friends (pending)</h1>
+				<h1>Developer Branch Updates</h1>
 			</div>
 		</div> 
 		<div class="row-fluid subheading">
@@ -280,3 +281,4 @@
 	</div>
 </body>
 </html>
+
